--- a/css/index.css
+++ b/css/index.css
@@ -3,38 +3,44 @@
  */
 .g-hd,.g-bd,.g-ft{width:100%;min-width:1205px;}
 .g-bd{background-color:#f8f8f8;}
-.g-ft{clear:both;height:263px;background-color:#2c3339;}
+.g-ft{background-color:#2c3339;}
 .g-box{width:1205px;margin:0 auto;}
 .g-box-hd{padding:30px 0;}
-.g-box-bd{margin-top:80px;margin-bottom:120px;}
+.g-box-bd{padding-top:80px;padding-bottom:120px;}
+.g-box-ft{padding:80px 0;}
 .g-mn{width:980px;}
-.g-sd{width:220px;}
+.g-sd{width:225px;}
 @media screen and (max-width:1205px){
     .g-box{width:1000px;}
     .g-mn{width:735px;}
 }
+.g-wrap-crs{width:100%;margin:30px 0 10px;}
+
 
 /**
  * 元件
  */
 /* icon */
-.u-icn{display:inline-block;background-image:url(../imgs/icns.png);background-repeat:no-repeat;}
+.u-icn,.u-icn2{display:inline-block;*display:block;*zoom:1;background-repeat:no-repeat;}
+/* small icons */
+.u-icn{background-image:url(../imgs/icns.png);}
 .u-icn-plus{width:8px;height:8px;background-position:-137px 0;}
 .u-icn-check{width:11px;height:9px;background-position:-28px 0;}
 .u-icn-close1{width:9px;height:9px;background-position:0 0;}
 /*.u-icn-close1:hover{width:9px;height:9px;background-position:-14px 0;}*/
 .u-icn-close2{width:23px;height:22px;background-position:-94px 0;}
-.u-icn-search{width:19px;height:19px;background-position:-47px 0;}
+.u-icn-search{width:19px;height:19px;background-position:-47px 0;cursor:pointer;}
 .u-icn-search:hover{width:19px;height:19px;background-position:-70px 0;}
 .u-icn-people{width:11px;height:11px;background-position:-123px 0;}
 .u-icn-prev{width:8px;height:12px;background-position:-151px 0;}
 .u-icn-next{width:8px;height:12px;background-position:-163px 0;}
 .u-icn-weibo{width:20px;height:16px;background-position:-182px 0;}
-/* pointer */
-.u-pointer{position:absolute;z-index:50;left:0;right:0;bottom:20px;line-height:0;text-align:center;}
-.u-pointer i{display:inline-block;margin-left:10px;width:10px;height:10px;border-radius:50%;background-color:#fff;cursor:pointer;}
-.u-pointer i:first-child{margin-left:0;}
-.u-pointer i.z-crt{background-color:#000;}
+/* product icons */
+.u-icn2{background-image:url(../imgs/icns2.png);}
+.u-icn2-prd1{width:80px;height:80px;background-position: 0 0;}
+.u-icn2-prd2{width:80px;height:80px;background-position: -91px 0;}
+.u-icn2-prd3{width:80px;height:80px;background-position: -182px 0;}
+
 
 /**
  * 模块
@@ -42,9 +48,10 @@
 /* notification */
 .m-ntf{width:100%;min-width:1205px;height:36px;line-height:36px;font-size:12px;color:#333;background-color:#f3f3f3;}
 .m-ntf .viewnow{color:#21a557;}
+
 /* title_logo */
-.m-tt{font:normal 12px/2 \5b8b\4f53;}
-.m-tt img,.m-follow,.m-followed,.m-tt .fans{height:20px;line-height:20px;text-align:center;}
+.m-tt{font:normal 12px \5b8b\4f53;}
+.m-tt img,.m-follow,.m-followed,.m-tt .fans{height:22px;line-height:22px;text-align:center;}
 .m-follow{width:54px;margin-left:30px;border:1px solid #21a557;border-radius:2px;color:#fff;background-color:#21a557;}
 .m-follow:hover{background-color:#2fb556;text-decoration:none;}
 .m-followed{width:104px;margin-left:30px;border:1px solid #efefef;border-radius:2px;background-color:#f8f8f8;}
@@ -53,366 +60,117 @@
 .m-followed a:hover{color:#21a557;text-decoration:underline;}
 .m-tt .fans{margin-left:15px;color:#666;}
 /* title_nav */
-.m-nav{font-size:16px;font-family:\5b8b\4f53;}
+.m-nav{font-size:16px;font-family:'Hiragino Sans GB W3',\5fae\8f6f\96c5\9ed1,sans-serif;}
+.m-nav li{float:left;margin-left:55px;}
+.m-nav li:first-child{margin-left:0;}
+.m-nav li a{font-size:16px;color:#666;}
+.m-nav li a:hover{color:#39a030;}
+.m-nav .u-icn-search{margin:0 14px 0 30px;}
 
-/* 导航 */
-.m-nav li{
-    display: inline-block;
-    margin-left: 55px;
-}
-.m-nav li:first-child{
-    margin-left: 0;
-}
-.m-nav a{
-    font-size: 16px;
-    color: #666;
-}
-.m-nav a:hover{
-    color: #39a030;
-}
-.m-nav i{
-    margin: 0 15px 0 30px;
-    float: right;
-}
-
-/* 轮播图 */
-.m-sld{
-    position: relative;
-    *zoom: 1;
-    width: 100%;
-    height: 460px;
-    overflow: hidden;
-}
-.m-sld .f-center{
-    width: 1652px;
-    margin-left: -826px;
-}
+/* slider */
+.m-sld{position:relative;zoom:1;width:100%;height:460px;overflow:hidden;}
+.m-sld .f-center-h{max-width:1652px;margin-left:-826px;}
+.m-pointer{position:absolute;z-index:50;left:0;right:0;bottom:20px;line-height:0;text-align:center;}
+.m-pointer i{display:inline-block;*display:block;*zoom:1;margin-left:10px;width:10px;height:10px;
+    border-radius:50%;background-color:#fff;cursor:pointer;}
+.m-pointer i:first-child{margin-left:0;}
+.m-pointer i.z-crt{background-color:#000;}
 /* 轮播图的淡入效果，用JS代替 */
-/* .m-sld .a-fadein{
-    -webkit-animation-duration: 500ms;
-         -o-animation-duration: 500ms;
-            animation-duration: 500ms;
-} */
+/*.m-sld .a-fadein{-webkit-animation-duration:500ms;-moz-animation-duration:500ms;
+    -o-animation-duration:500ms;animation-duration:500ms;}*/
 
-/* 三个产品 */
-.m-prd ul{
-    margin: 23px 0 23px -80px;
-}
-.m-prd li{
-    float: left;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    padding-left: 80px;
-    width: 33.33%;    
-}
-.m-prd .u-bicn{
-    float: left;
-    width: 80px;
-    height: 80px;
-}
-/* .m-prd .u-bicn1{
-    background: url(../images/prd1.png) center top no-repeat;
-}
-.m-prd .u-bicn2{
-    background: url(../images/prd2.png) center top no-repeat;
-}
-.m-prd .u-bicn3{
-    background: url(../images/prd3.png) center top no-repeat;
-} */
-.m-prd .prd-box{
-    margin-left: 100px;
-}
-.m-prd .prd-box h2{
-    font-size: 22px;
-    white-space: nowrap;
-    overflow: hidden;
-    -o-text-overflow: ellipsis;
-       text-overflow: ellipsis;
-}
-.m-prd .prd-box p{
-    margin: 20px 0 35px;
-    line-height: 24px;
-    font-size: 14px;
-    color: #666;
-}
-.m-prd .prd-box a{
-    font-size: 14px;
-    color: #39a030;
-}
-.m-prd .prd-box a:hover{
-    text-decoration: underline;
-}
+/* products */
+.m-prd{margin:60px 0 60px -80px;}
+.m-prd li{float:left;padding-left:80px;width:33.33%;
+    -webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+/*.m-prd .u-icn2{float:left;width:80px;height:80px;}*/
+.m-prd .cnt{margin-left:100px;}
+.m-prd .cnt .stt{font-size:22px;}
+.m-prd .cnt .intro{margin:20px 0 35px;font-size:14px;line-height:24px;color:#666;}
+.m-prd .cnt a{font-size:14px;color:#39a030;}
+.m-prd .cnt a:hover{text-decoration:underline;}
 
-/* 工作环境 */
-.m-wksp{
-    position: relative;
-    width: 100%;
-    height: 220px;
-    overflow: hidden;
-    white-space: nowrap;
-}
-.m-wksp .f-center{
-    width: 1616px;
-    margin-left: -808px;
-}
-.m-wksp p{
-    height: 0;
-    font-size: 14px;
-    color: #666;
-    text-indent: -5000px;
-}
+/* work environment */
+.m-env{position:relative;width:100%;height:220px;overflow:hidden;white-space:nowrap;}
+.m-env .f-center-h{width:1616px;margin-left:-808px;}
+.m-env img{width:320px;height:220px;}
+.m-env .f-ti1{height:0;font-size:14px;color:#666;}
 
-/* 课程展示 */
-/* tab切换 */
-.m-tab{
-    font-size: 0;
-}
-.m-tab li{
-    display: inline-block;
-    width: 200px;
-    height: 50px;
-    line-height: 50px;
-    font-size: 20px;
-    color: #666;
-    background-color: #fff;
-    text-align: center;
-    cursor: pointer;
-}
-.m-tab li.z-crt, .m-tab li:hover{
-    color: #fff;
-    background-color: #39a030;
-}
-/* 课程信息 */
-.m-crs{
-    width: 100%;
-    margin: 30px 0 10px;
-}
-.m-crsbox{
-    position: relative;
-    float: left;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    margin: 0 20px 20px 0;
-    width: 225px;
-    height: 230px;
-    -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-            box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-}
-.m-crsbox a{
-    display: block;
-    width: 100%;
-    /*height: 100%;*/
-}
-.m-crsbox img{
-    width: 223px;
-    height: 124px;
-    padding: 1px 2px;
-}
-.m-crsbox p{
-    margin: 10px 10px 0;
-    font-size: 12px;
-}
-.m-crsbox .subject{
-    color: #333;
-}
-.m-crsbox .subject:hover{
-    color: #39a030;
-}
-.m-crsbox .provider{
-    color: #999;    
-}
-.m-crsbox .learner{
-    border: 1px solid #e3e3e3;
-    padding: 4px;
-    color: #999;
-}
-.m-crsbox .kind, .m-crsbox .descrp{
-    display: none;
-}
-.m-crsbox .price{
-    color: #ff3f00;
-}
-/* 课程信息hover效果 */
-.m-crsbox a:hover{
-    position: absolute;
-    left: -10px;
-    top: -10px;
-    z-index: 100;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    padding: 20px;
-    width: 470px;
-    height: 250px;
-    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-            box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-    background-color: #fff;
-}
-.m-crsbox a:hover img{
-    float: left;
-    margin-right: 15px;
-}
-.m-crsbox a:hover .subject{
-    display: inline-block;
-    position: absolute;
-    left: 250px;
-    right: 0;
-    top: 10px;
-    padding: 0;
-    height: 20px;
-    font-size: 18px;
-    font-weight: bold;
-    white-space: nowrap;
-    overflow: hidden;
-    -ms-text-overflow: ellipsis;
-        -o-text-overflow: ellipsis;
-       text-overflow: ellipsis;
-}
-.m-crsbox a:hover .provider{
-    position: absolute;
-    left: 250px;
-    top: 70px;
-    color: #666;
-}
-.m-crsbox a:hover .provider:before{
-    content: "发布者：";
-}
-.m-crsbox a:hover .learner{
-    position: absolute;
-    left: 250px;
-    top: 40px;
-    border: none;
-    height: 17px;
-    color: #666;
-}
-.m-crsbox a:hover .learner span:after{
-    content: "人在学";
-}
-.m-crsbox a:hover .kind{
-    display: block;
-    position: absolute;
-    left: 250px;
-    top: 90px;
-    font-size: 12px;
-    color: #666;
-}
-.m-crsbox a:hover .price{
-    display: none;
-}
-.m-crsbox a:hover .descrp{
-    display: block;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 20px;
-    height: 38px;
-    line-height: 24px;
-    font-size: 14px;
-    color: #666;
-    background-color: #f8f8f8;
-    overflow: hidden;
-}
-/* 翻页器 */
-.m-page{
-    margin-right: 20px;
-    height: 20px;
-    text-align: center;
-}
-.m-page li{
-    display: inline-block;
-    width: 20px;
-    line-height: 20px;
-    font-size: 14px;
-    color: #666;
-    vertical-align: middle;
-    cursor: pointer;
-}
-.m-page li.z-crt{
-    color: #39a030;
-}
-.m-page li:hover{
-    color: #fff;
-    background-color: #9dd8b1;
-}
-.m-page i{
-    width: 30px;
-    height: 20px;
-    background-color: #9dd8b1;
-    vertical-align: middle;
-}
+/* course_tabs */
+.m-tab{font-size:0;}/*去除行内元素换行书写产生的空白*/
+.m-tab li{display:inline-block;*display:block;*zoom:1;width:200px;height:50px;line-height:50px;
+    font-size:20px;color:#666;background-color:#fff;text-align:center;cursor:pointer;}
+.m-tab li.z-crt,.m-tab li:hover{color:#fff;background-color:#39a030;}
+/* course_list */
+.m-crs,.m-crs-hover{background-color:#fff;}
+.m-crs{position:relative;float:left;/*width:225px;height:228px;*/margin:0 20px 20px 0;padding:1px 1px 0;
+    /*-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;*/
+    -webkit-box-shadow:1px 1px 1px rgba(0,0,0,.1);-moz-box-shadow:1px 1px 1px rgba(0,0,0,.1);
+    -o-box-shadow:1px 1px 1px rgba(0,0,0,.1);box-shadow:1px 1px 1px rgba(0,0,0,.1);}
+.m-crs .logo{width:223px;height:124px;/*margin:1px;*/font-size:12px;}
+.m-crs .info{width:223px;}
+.m-crs .subject,.m-crs .provider,.m-crs .learner,.m-crs .price{margin:0 10px 10px;}
+.m-crs .subject{margin-top:10px;color:#333;}
+.m-crs .subject:hover{color:#39a030;}
+.m-crs .provider,.m-crs .learner{color:#999;}
+.m-crs .learner{padding:3px;border:1px solid #e3e3e3;
+    -webkit-border-radius:2px;-moz-border-radius:2px;-o-border-radius:2px;border-radius:2px;}
+.m-crs .price{color:#ff3f00;}
+.m-crs .category,.m-crs .dscrp{display:none;}
+/* course_list_hover */
+.m-crs-hover{position:absolute;left:-10px;top:-10px;z-index:100;width:470px;padding:11px 11px 0;
+    -webkit-box-shadow:0 0 3px rgba(0,0,0,.5);-moz-box-shadow:0 0 3px rgba(0,0,0,.5);
+    -o-box-shadow:0 0 3px rgba(0,0,0,.5);box-shadow:0 0 3px rgba(0,0,0,.5);}
+.m-crs-hover .logo{float:left;margin-right:20px;}
+.m-crs-hover .info{position:relative;float:left;}
+.m-crs-hover .subject{height:26px;line-height:26px;margin:0;font-size:18px;font-weight:bold;}
+.m-crs-hover .learner,.m-crs-hover .provider,.m-crs-hover .category{position:absolute;margin:0;color:666;}
+.m-crs-hover .category,.m-crs-hover .dscrp{display:block;}
+.m-crs-hover .learner{top:39px;border:0;}
+.m-crs-hover .learner .num:after{content:'人在学';}
+.m-crs-hover .provider{top:64px;}
+.m-crs-hover .provider:before{content:'发布者：';}
+.m-crs-hover .category{top:84px;}
+.m-crs-hover .category:before{content:'分类：';}
+.m-crs-hover .price{display:none;}
+.m-crs-hover .dscrp{padding:12px 24px 12px 10px;font-size:14px;line-height:24px;color:#666;background-color:#f8f8f8;}
 
-/* 侧边栏 */
-.m-sdbox{
-    width: 100%;
-    -webkit-box-shadow: -1px 1px 1px rgba(6, 0, 1, 0.2);
-            box-shadow: -1px 1px 1px rgba(6, 0, 1, 0.2);
-    background-color: #fff;
-}
-.m-sdbox > h3{
-    padding: 0 22px;
-    height: 55px;
-    line-height: 55px;
-    font-size: 16px;
-    color: #333;
-}
-.m-sdbox .cnt{
-    border-top: 1px solid #ddd;
-    padding: 20px;
-    font-size: 14px;
-}
-/* 机构介绍 */
-.m-sdbox-video{
-    margin: 0 0 20px 0;
-}
-.m-sdbox-video .cnt{
-    color: #666;
-}
-.m-sdbox-video .cnt img{
-    margin-top: 9px;
-}
-/* 热门排行 */
-.m-sdbox-rank .cnt li{
-    margin-bottom: 20px;
-}
-.m-sdbox-rank .cnt li:last-child{
-    margin-bottom: 0;
-}
-.m-sdbox-rank .cnt-right{
-    margin-left: 60px;
-}
-.m-sdbox-rank .cnt-right a{
-    color: #333;
-}
-.m-sdbox-rank .cnt-right p+p{
-    margin-top: 13px;
-    font-size: 10px;
-    color: #999;
-}
+/* pager */
+.m-pg{margin-right:20px;text-align:center;}
+.m-pg li{display:inline-block;*display:block;*zoom:1;margin-left:10px;}
+.m-pg li a{display:block;width:20px;height:20px;line-height:20px;font-size:14px;color:#666;}
+.m-pg li a.z-crt{color:#39a030;}
+.m-pg li a:hover,.m-pg li.prev a,.m-pg li.next a{color:#fff;background-color:#9dd8b1;}
+.m-pg li.prev a,.m-pg li.next a{width:30px;}
+.m-pg li.prev{margin-left:0;}
 
-/* 底部 */
-.m-ft-col1, .m-ft-col2{
-    font-size: 12.5px;
-    line-height: 2;
-    color: #bebfc0;
-}
-.m-ft-col1{
-    margin: 80px 50px 0;
-    text-align: left;
-}
-.m-ft-col1 img{
-    margin: 10px 0;
-}
-.m-ft-col2{
-    margin: 80px 0 0 100px;
-}
-.m-ft-col2 a{
-    font-size: 14.5px;
-    color: #bebfc0;
-}
-.m-ft-col2 a:hover{
-    text-decoration: underline;
-}
+/* side content */
+.m-mdl0{width:100%;background-color:#fff;
+    -webkit-box-shadow:0 1px 1px rgba(6,0,1,.2);-moz-box-shadow:0 1px 1px rgba(6,0,1,.2);
+    -o-box-shadow:0 1px 1px rgba(6,0,1,.2);box-shadow:0 1px 1px rgba(6,0,1,.2);}
+.m-mdl0 .tt{/*height:55px;*/padding:20px;border-bottom:1px solid #ddd;font-size:16px;color:#333;}
+.m-mdl0 .cnt{padding:20px;font-size:14px;}
+.m-mdl0 .cnt li{margin-top:20px;}
+/* side_introduce */
+.m-mdl0-video .cnt{color:#666;}
+.m-mdl0-video .cnt img{margin-top:9px;}
+/* side_ranking */
+.m-mdl0-rank{margin-top:20px;}
+.m-mdl0-rank .cnt li{margin-top:20px;}
+.m-mdl0-rank .cnt li:first-child{margin-top:0;}
+.m-mdl0-rank .cnt .info{width:120px;}
+.m-mdl0-rank .cnt .subject{display:block;color:#333;}
+.m-mdl0-rank .cnt .subject:hover{color:#39a030;}
+.m-mdl0-rank .cnt .learner{margin-top:13px;font-size:10px;color:#999;}
+
+/* copyright */
+.m-cprt,.m-lnk{font-size:12.5px;line-height:2;color:#bebfc0;text-align:left;}
+.m-cprt{margin:0 50px;margin-top:10px;}
+/* ft_links */
+.m-lnk{margin-left:100px;}
+.m-lnk a{font-size:15px;color:#bebfc0;}
+.m-lnk a:hover{text-decoration:underline;}
+.m-lnk .u-icn-weibo{margin-top:2px;}
 
 /* mask */
 .m-mask{position:fixed;z-index:999;top:0;left:0;width:100%;height:100%;
